--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,4 +116,21 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Animations_BottomPush">
+        <item name="android:windowEnterAnimation">@anim/pw_push_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/pw_push_bottom_out</item>
+    </style>
+
+    <style name="split_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/color_EEEEEE</item>
+    </style>
+
+    <style name="black_12_style">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black80</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
