--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,13 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color_EEEEEE">#EEEEEE</color>
     <color name="color_212121">#212121</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_cccccc">#cccccc</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_e7e7e7">#e7e7e7</color>
+    <color name="color_fccd02">#fccd02</color>
+    <color name="color_ff333333">#ff333333</color>
+    <color name="color_e9e9e9">#e9e9e9</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
