--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,4 +144,23 @@
         <item name="android:backgroundDimAmount">0.8</item>
     </style>
 
+    <style name="color_999999_13_style">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/color_999999</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="FullTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <!--<item name="android:windowIsTranslucent">true</item>-->
+    </style>
+
+    <style name="black_15_style">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/color_333333</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
