--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -5,12 +5,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:text="品类"
-            android:textSize="28sp"
-            android:gravity="center"
-            android:textColor="@color/blue"
-            android:layout_height="match_parent" />
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:text="    粘贴宝贝标题，先领券再购物"
+            android:textSize="13sp"
+            android:paddingLeft="10dp"
+            android:drawableLeft="@mipmap/category_search_icon"
+            android:gravity="center|left"
+            android:background="@drawable/shape_category_search_bg"
+            android:textColor="@color/black"
+            android:layout_height="30dp" />
+
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:background="#e5e5e5"
+            android:layout_height="1px"/>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
+            
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="90dp"
+                android:layout_height="match_parent"/>
+
+            <View
+                android:layout_width="1px"
+                android:background="#e5e5e5"
+                android:layout_height="match_parent"/>
+            
+        </LinearLayout>
     </LinearLayout>
 </layout>
