--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,10 @@
     <color name="color_fccd02">#fccd02</color>
     <color name="color_ff333333">#ff333333</color>
     <color name="color_e9e9e9">#e9e9e9</color>
+    <color name="color_BDBDBD">#BDBDBD</color>
+    <color name="color_F7F7F7">#F7F7F7</color>
+    <color name="color_f4f5f9">#f4f5f9</color>
+    <color name="color_26A5FF">#26A5FF</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#333333</color>
