增加java8，分类页面分类列表

--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -34,7 +34,9 @@
             
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_categories"
-                android:layout_width="90dp"
+                android:paddingTop="10dp"
+                android:overScrollMode="never"
+                android:layout_width="95dp"
                 android:layout_height="match_parent"/>
 
             <View
@@ -42,7 +44,7 @@
                 android:background="#e5e5e5"
                 android:layout_height="match_parent"/>
 
-            <android.support.v7.widget.RecyclerView
+            <com.github.jdsjlzx.recyclerview.LRecyclerView
                 android:id="@+id/rv_good"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
