修正一级品类bean

--- a/app/src/main/res/layout/item_category_name.xml
+++ b/app/src/main/res/layout/item_category_name.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.tudouni.makemoney.model.CategoryNameItem" />
+            type="com.tudouni.makemoney.model.Category"/>
     </data>
 
     <TextView
