--- a/QrCodeModel/lib-zxing/src/main/res/layout/camera.xml
+++ b/QrCodeModel/lib-zxing/src/main/res/layout/camera.xml
@@ -7,5 +7,81 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <RelativeLayout
+        android:id="@+id/rotRl"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/encode_view"
+        android:gravity="center_vertical">
 
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:src="@drawable/common_back_black" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="扫一扫"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/save"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="相册"
+            android:textColor="@color/black"
+            android:textSize="14dp"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/ivImg"
+            android:layout_width="34dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:padding="5dp" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@drawable/loadingview"
+        android:gravity="center_vertical"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@color/black"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="图片识别中..."
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <com.uuzuche.lib_zxing.view.SpinView
+            android:id="@+id/spview"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignRight="@+id/title_text"
+            android:layout_centerInParent="true"
+            android:background="@color/black" />
+    </LinearLayout>
 </RelativeLayout>
