--- a/QrCodeModel/lib-zxing/src/main/res/values/attrs.xml
+++ b/QrCodeModel/lib-zxing/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="ViewfinderView">
+    <declare-styleable name="innerrect">
         <attr name="inner_width" format="dimension"/>
         <attr name="inner_height" format="dimension"/>
         <attr name="inner_margintop" format="dimension" />
