--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -46,6 +46,8 @@
 
             <com.github.jdsjlzx.recyclerview.LRecyclerView
                 android:id="@+id/rv_good"
+                android:overScrollMode="never"
+                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             
