--- a/app/src/main/res/layout/item_good.xml
+++ b/app/src/main/res/layout/item_good.xml
@@ -11,18 +11,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_good_pic"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             app:loadImage="@{item.imgUrl}" />
 
         <TextView
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{item.name}"
+            android:layout_marginBottom="8dp"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
