--- a/app/src/main/res/layout/item_good_grid.xml
+++ b/app/src/main/res/layout/item_good_grid.xml
@@ -13,9 +13,11 @@
         android:orientation="vertical">
 
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:gravity="left"
+            android:textStyle="bold"
             android:text="@{item.name}"
             android:textColor="@color/black"
             android:textSize="12sp" />
