--- a/app/src/main/res/layout/fragment_good_category.xml
+++ b/app/src/main/res/layout/fragment_good_category.xml
@@ -8,6 +8,7 @@
 
 
         <TextView
+            android:id="@+id/tv_search_bar"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_marginLeft="60dp"
