--- a/app/src/main/res/drawable/bg_doufen_userfragment.xml
+++ b/app/src/main/res/drawable/bg_doufen_userfragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="#FCA455"
-        android:startColor="#FA709A" />
+        android:endColor="#CB1527"
+        android:startColor="#CB1527" />
     <corners
         android:bottomLeftRadius="20dp"
         android:topLeftRadius="20dp" />
