--- a/app/src/main/res/drawable/bg_pink_radius_20.xml
+++ b/app/src/main/res/drawable/bg_pink_radius_20.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="#FF5C5C" />
+    <solid android:color="#FBFF00" />
     <stroke
         android:width="1dp"
-        android:color="#ffffff" />
+        android:color="#00000000" />
     <size
         android:width="15dp"
         android:height="15dp" />
