--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     >
 
@@ -10,32 +11,33 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:background="@drawable/shape_mall_title_bg"
-            android:layout_height="45dp">
+            android:layout_height="45dp"
+            android:background="@drawable/shape_mall_title_bg">
 
             <TextView
                 android:id="@+id/tv_search_bar"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_marginLeft="70dp"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="70dp"
-                android:text="    粘贴宝贝标题，先领券再购物"
-                android:textSize="13sp"
-                android:paddingLeft="15dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/shape_mall_search_bg"
                 android:drawableLeft="@mipmap/mall_search_icon"
                 android:gravity="center|left"
-                android:background="@drawable/shape_mall_search_bg"
-                android:textColor="@color/white"
                 android:padding="6dp"
-                android:layout_height="wrap_content" />
-
+                android:paddingLeft="15dp"
+                android:text="    粘贴宝贝标题，先领券再购物"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
 
 
         </RelativeLayout>
 
-
-
+        <com.github.jdsjlzx.recyclerview.LRecyclerView
+            android:id="@+id/lrv_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
