--- a/app/src/main/res/layout/tel_login.xml
+++ b/app/src/main/res/layout/tel_login.xml
@@ -18,13 +18,14 @@
             android:gravity="center"
             android:text="+86"
             android:textColor="@color/color_333333"
-            android:visibility="gone"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/etTelNumber"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:background="@null"
             android:hint="@string/input_phone_number_hint"
@@ -32,10 +33,9 @@
             android:maxLength="11"
             android:maxLines="1"
             android:singleLine="true"
-            android:text=""
-            android:layout_marginLeft="8dp"
-            android:textColorHint="@color/color_999999"
+            android:text="18201213360"
             android:textColor="@color/color_333333"
+            android:textColorHint="@color/color_999999"
             android:textScaleX="0.99"
             android:textSize="14sp" />
 
@@ -56,7 +56,7 @@
         android:id="@+id/tel_login_line"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/color_cccccc"/>
+        android:background="@color/color_cccccc" />
 
     <LinearLayout
         android:id="@+id/tel_phone_ll_layout_2"
@@ -69,21 +69,22 @@
             android:gravity="center"
             android:text="@string/vcode"
             android:textColor="@color/color_333333"
-            android:visibility="gone"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/etCode"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入验证码"
             android:inputType="number"
-            android:layout_marginLeft="8dp"
             android:maxLength="6"
-            android:textColorHint="@color/color_999999"
+            android:text="000000"
             android:textColor="@color/color_333333"
+            android:textColorHint="@color/color_999999"
             android:textScaleX="0.99"
             android:textSize="14sp" />
     </LinearLayout>
